# ai-cv-claude-skills

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  justfile  mkdocs.yml  pixi.toml  pyproject.toml  settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  lint.yml  release.yml  test.yml
agents/: README.md
agents/code-review/: README.md  SKILL.md  action.yml  agent.toml
agents/data-engineer/: README.md  SKILL.md  agent.toml
agents/devops-infra/: README.md  SKILL.md  agent.toml
agents/expert-coder/: README.md  SKILL.md  agent.toml
agents/ml-engineer/: README.md  SKILL.md  agent.toml
agents/test-engineer/: README.md  SKILL.md  action.yml  agent.toml
archetypes/: README.md
archetypes/cv-inference-service/: README.md  archetype.toml
archetypes/cv-inference-service/template/: Dockerfile  README.md  pyproject.toml
archetypes/cv-inference-service/template/src/${package_name}/: __init__.py  app.py  schemas.py
archetypes/cv-inference-service/template/tests/: test_app.py
archetypes/data-processing-pipeline/: README.md  archetype.toml
archetypes/library-package/: README.md  archetype.toml
archetypes/model-zoo/: README.md  archetype.toml
archetypes/pytorch-training-project/: README.md  archetype.toml
archetypes/pytorch-training-project/template/: README.md  pyproject.toml
archetypes/pytorch-training-project/template/configs/: config.yaml
archetypes/pytorch-training-project/template/configs/model/: default.yaml
archetypes/pytorch-training-project/template/configs/trainer/: default.yaml
archetypes/pytorch-training-project/template/src/${package_name}/: __init__.py  data.py  model.py  train.py
archetypes/pytorch-training-project/template/tests/: test_model.py
archetypes/research-notebook/: README.md  archetype.toml
docs/: index.md
docs/agents/: code-review.md  data-engineer.md  devops-infra.md  expert-coder.md  index.md  ml-engineer.md  test-engineer.md
docs/archetypes/: cv-inference-service.md  data-processing-pipeline.md  index.md  library-package.md  model-zoo.md  pytorch-training-project.md  research-notebook.md
docs/examples/: common-patterns.md  full-workflow.md
docs/getting-started/: first-project.md  installation.md  quick-start.md
docs/guides/: adding-skills.md  best-practices.md  creating-projects.md  customization.md
docs/skills/: abstraction-patterns.md  aws-sagemaker.md  code-quality.md  docker-cv.md  dvc.md  fastapi.md  gcp.md  github-actions.md  github-repo-setup.md  gradio.md  huggingface.md  hydra-config.md  index.md  interface-design.md  kubernetes.md  library-review.md  loguru.md  master-skill.md  matplotlib.md  mlflow.md  onnx.md  opencv.md  pixi.md  pre-commit.md  pydantic-strict.md  pypi.md  pytorch-lightning.md  tensorboard.md  tensorrt.md  testing.md  vscode.md  wandb.md
settings/: antigravity.json  base.json  claude.json
skills/: README.md
skills/abstraction-patterns/: README.md  SKILL.md  skill.toml
skills/aws-sagemaker/: README.md  SKILL.md  skill.toml
skills/code-quality/: README.md  SKILL.md  skill.toml
skills/docker-cv/: README.md  SKILL.md  skill.toml
skills/dvc/: README.md  SKILL.md  skill.toml
skills/fastapi/: README.md  SKILL.md  skill.toml
skills/gcp/: README.md  SKILL.md  skill.toml
skills/github-actions/: README.md  SKILL.md  skill.toml
skills/github-repo-setup/: README.md  SKILL.md  skill.toml
skills/gradio/: README.md  SKILL.md  skill.toml
skills/huggingface/: README.md  SKILL.md  skill.toml
skills/hydra-config/: README.md  SKILL.md  skill.toml
skills/interface-design/: README.md  SKILL.md  skill.toml
skills/kubernetes/: README.md  SKILL.md  skill.toml
skills/library-review/: README.md  SKILL.md  skill.toml
skills/loguru/: README.md  SKILL.md  skill.toml
skills/master-skill/: README.md  SKILL.md  skill.toml
skills/matplotlib/: README.md  SKILL.md  skill.toml
skills/mlflow/: README.md  SKILL.md  skill.toml
skills/onnx/: README.md  SKILL.md  skill.toml
skills/opencv/: README.md  SKILL.md  skill.toml
skills/pixi/: README.md  SKILL.md  skill.toml
skills/pre-commit/: README.md  SKILL.md  skill.toml
skills/pydantic-strict/: README.md  SKILL.md  skill.toml
skills/pypi/: README.md  SKILL.md  skill.toml
skills/pytorch-lightning/: README.md  SKILL.md  skill.toml
skills/tensorboard/: README.md  SKILL.md  skill.toml
skills/tensorrt/: README.md  SKILL.md  skill.toml
skills/testing/: README.md  SKILL.md  skill.toml
skills/vscode/: README.md  SKILL.md  skill.toml
skills/wandb/: README.md  SKILL.md  skill.toml
src/whet/: __init__.py  __main__.py
src/whet/adapters/: __init__.py  antigravity.py  base.py  claude.py  copilot.py  cursor.py  detect.py
src/whet/cli/: __init__.py  config.py  doctor.py  init.py  install.py  settings.py  skills.py  target.py  update.py
src/whet/core/: __init__.py  config.py  skill.py
src/whet/registry/: __init__.py  loader.py  resolver.py  search.py
src/whet/scaffold/: __init__.py  engine.py
src/whet/settings/: __init__.py  engine.py
tests/: test_agents.py  test_archetypes.py  test_github_actions.py  test_skills_completeness.py
tests/integration/: test_project_generation.py
