[project]
name = "whet"
version = "0.1.0"
description = "Sharpen your AI coder — install expert skills into AI coding agents"
authors = [{name = "Enrique G. Ortiz", email = "ortizeg@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["ai", "skills", "claude", "agents", "cli", "computer-vision", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "pydantic>=2.0",
    "tomli>=2.0; python_version < '3.12'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.8",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings>=0.24",
    "mkdocstrings-python>=1.11",
]

[project.urls]
Homepage = "https://github.com/ortizeg/whet"
Documentation = "https://ortizeg.github.io/whet/"
Repository = "https://github.com/ortizeg/whet"
Issues = "https://github.com/ortizeg/whet/issues"

[project.scripts]
whet = "whet.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whet"]

[tool.hatch.build.targets.sdist]
include = [
    "src/whet/",
    "skills/",
    "agents/",
    "archetypes/",
    "settings/",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".pixi", ".venv", "archetypes/*/template"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "T20", "SIM"]
ignore = ["S101", "B008", "UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "T201"]
"src/whet/cli/**/*.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["typer", "typer.*"]
ignore_missing_imports = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["whet.cli.*"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tomli"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
