[project]
name = "${project_slug}"
version = "0.1.0"
description = "${description}"
authors = [{name = "${author}"}]
requires-python = ">=${python_version}"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.8",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/${package_name}"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "T20", "SIM"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "T201"]

[tool.mypy]
python_version = "${python_version}"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
